--- a/acrylicpaint/build.gradle
+++ b/acrylicpaint/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "anupam.acrylic"
+        // applicationId "anupam.acrylic"
         minSdkVersion 14
         // Figure out stupid garbage Scoped Storage for 29+
         // https://developer.android.com/preview/privacy/storage#scoped-storage
@@ -24,8 +24,8 @@ android {
 
     compileOptions {
         encoding "UTF-8"
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 
     lintOptions {
