Updated to permission 4.0.0 lib Force the grantPermission to true for WRITE_STORAGE to avoid askin user for new android

--- a/acrylicpaint/build.gradle
+++ b/acrylicpaint/build.gradle
@@ -35,5 +35,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.nabinbhandari.android:permissions:3.8'
+    implementation "com.nabinbhandari.android:permissions:$permissionsVersion"
 }
